# lidar-archaeology-segmentation

./: .gitignore  README.md  evaluation.slurm  pyproject.toml  requirements.txt  run_slurm.slurm  training.slurm
thesis/: .gitignore  extract_imports.py  imports.txt  pyproject.toml  requirements.txt  run_slurm.slurm  script.slurm
thesis/configs/: evaluate.yaml  inference.yaml  train.yaml
thesis/configs/dataset/: raw_dem21.yaml  raw_dem_shadowed_2.yaml  raw_dem_shadowed_4.yaml  raw_dem_shadowed_6.yaml  rgb21_stu.yaml  rgb_stu_shadowed_4.yaml  rgd21(stu_norm).yaml  rgd_(stu_raw).yaml  rgd_(stu_raw)_shadowed_4.yaml  sps(znorm)_10.yaml  sps(znorm)_10_shadowed_2.yaml  sps(znorm)_12.yaml  sps(znorm)_12_shadowed_2.yaml  sps(znorm)_5.yaml  sps(znorm)_5_shadowed_2.yaml  sps(znorm)_8.yaml  sps(znorm)_8_shadowed_2.yaml  sps21(znorm)_10.yaml  sps_10.yaml  sps_10_shadowed_2.yaml  terraces_aniso_ladzany_1024_256.yaml  terraces_aniso_ladzany_128_32.yaml  terraces_aniso_ladzany_256_64.yaml  terraces_aniso_ladzany_512_128.yaml  terraces_aniso_ladzany_full.yaml  terraces_aniso_ladzany_shadowed_1024_256.yaml  terraces_aniso_ladzany_shadowed_128_32.yaml  terraces_aniso_ladzany_shadowed_256_64.yaml  terraces_aniso_sasovske.yaml  (+17 more)
thesis/data/: README.md
thesis/notebooks/: assemble_dataset_for_sk.ipynb  calculate_slope_svf_po.ipynb  compute_class_weights.ipynb  create_manifest.ipynb  data_prep.ipynb  finalne_vyhodnotenie.ipynb  from_tiff_to_npz.ipynb  pred_mask.ipynb  produce_data_from_raw.ipynb  terrases_produce_data.ipynb
thesis/src/: evaluation.py  inference.py  train.py
(+110 files in other folders)
