[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lidar-archaeology-segmentation"
version = "0.1.0"
description = "Deep learning segmentation for lidar archaeology data"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "pandas",
    "pillow",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.basedpyright]
typeCheckingMode = "basic"
reportAny = false
reportUnknownArgumentType = false
